Bug 440827 - Closing an account while in Ledger view will clear the account selection drop down list
Summary: Closing an account while in Ledger view will clear the account selection drop...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.1.2
Platform: Other Other
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-10 10:06 UTC by Dawid Wróbel
Modified: 2023-08-23 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2021-08-10 10:06:06 UTC
SUMMARY
Closing an account while in Ledger view will clear the account selection drop down list, if "Show all accounts" is not enabled. 

STEPS TO REPRODUCE
1. Make sure "Show all accounts" is disabled
2. Open an account in the ledger
3. Close the account

OBSERVED RESULT
Drop down list clears, but the account is still shown in the ledger. 

EXPECTED RESULT
Some other account should be opened up in the ledger, possibly the previously-opened one or the first in the hierarchy.
Comment 1 Thomas Baumgart 2023-08-23 14:07:37 UTC
Git commit c49a145e33da313a16bf46f1f74de3326b1b74f4 by Thomas Baumgart.
Committed on 23/08/2023 at 16:07.
Pushed by tbaumgart into branch 'master'.

Close ledger tab when account is closed
FIXED-IN: 5.2

M  +4    -0    kmymoney/kmymoney.cpp
M  +10   -4    kmymoney/views/simpleledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/c49a145e33da313a16bf46f1f74de3326b1b74f4