Close ledger tab when account is closed

BUG: 440827
FIXED-IN: 5.2